# flowdl

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
flowdl/: __init__.py
flowdl/cli/: __init__.py  main.py
flowdl/config/: presets.json
flowdl/core/: downloader.py  models.py  organiser.py  pipeline.py  processor.py  transcriber.py  watcher.py
flowdl/integrations/: __init__.py  ffmpeg_wrapper.py  whispercpp_wrapper.py  ytdlp_wrapper.py
flowdl/utils/: config_loader.py  errors.py  file_utils.py  naming.py
tests/: test_cli.py  test_config_loader.py  test_downloader.py  test_ffmpeg_wrapper.py  test_file_utils.py  test_naming.py  test_organiser.py  test_pipeline.py  test_processor.py  test_transcriber.py  test_watcher.py  test_whispercpp_wrapper.py  test_ytdlp_wrapper.py
