[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowdl"
version = "0.1.0"
description = "Preset-driven local media pipeline wrapping yt-dlp and ffmpeg."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "FlowDL contributors"}
]
keywords = ["cli", "yt-dlp", "ffmpeg", "media", "downloader"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Multimedia :: Sound/Audio"
]
dependencies = [
  "yt-dlp>=2025.1.1"
]

[project.scripts]
flowdl = "flowdl.cli.main:main"
